# Raytracer

./: .gitignore  Cargo.toml  Makefile  README.md  cone.json  cylinder.json  ex.json  example.json  example2.json  example_gi.json  global_illum.json  json.json  missing_texture.ppm  recursa.json  recursb.json  triang.json
benches/: bench1.json  frame.rs
config_files/: recursa.json
examples/: example.json  example_refraction.json  global_illum.json
src/: config.rs  lib.rs  main.rs  ppm_interface.rs
src/config/: mod.rs
src/config_file/: config_file_reader  ex.cfg  mod.rs
src/json_parser/: ex.json  mod.rs
src/matrix/: mod.rs
src/nannou/: mod.rs
src/nannou_interface/: components.rs  layout.rs  mod.rs
src/nannou_interface/layout/: mod.rs
src/nannou_interface/layout/components/: mod.rs
src/ppm_interface/: mod.rs
src/renderer/: camera.rs  ex.json  lights.rs  mod.rs  parsing.rs  types.rs
src/renderer/camera/: mod.rs
src/renderer/lights/: mod.rs
src/renderer/parsing/: mod.rs
src/renderer/primitives/: cone.rs  cylinder.rs  implementations.rs  intersections.rs  mesh.rs  mod.rs  parent.rs  plane.rs  sphere.rs  triangle.rs
src/renderer/renderer_common/: mod.rs
src/sfml_interface/: mod.rs
src/vectors/: mod.rs
tests/: matrix_test.rs  vector_test.rs
