[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[test]]
name = "matrix_tests"
path = "tests/matrix_test.rs"

[[test]]
name = "vector_tests"
path = "tests/vector_test.rs"