[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
erased-serde = "0.3"
rand = "0.8.5"
nannou = "0.18.1"
sfml = "0.17.0"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "frame"
harness = false

[[test]]
name = "matrix_tests"
path = "tests/matrix_test.rs"

[[test]]
name = "vector_tests"
path = "tests/vector_test.rs"
